--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "socket.io" : "*",
-    "connect"   : "*"
+    "connect"   : "*",
+    "connect-assetmanager" : "*"
   }
 }
