update package.json with cookies dep.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "socket.io" : "*",
     "connect"   : "*",
-    "connect-assetmanager" : "*"
+    "connect-assetmanager" : "*",
+    "cookies" : "*"
   }
 }
