killing some lorem ipsum text

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "socket.io" : "*",
     "connect"   : "*",
-    "connect-assetmanager" : "*",
-    "cookies" : "*"
+    "connect-assetmanager" : "*"
   }
 }
