move to a new asset manager, adding gzip support for static files

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "node": "*"
   },
   "dependencies": {
-    "socket.io" : "*",
-    "connect"   : "*",
-    "connect-assetmanager" : "*"
+    "socket.io"     : "*",
+    "connect"       : "*",
+    "connect-gzip"  : "*",
+    "ams"           : "*"
   }
 }
