--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "deps/headjs"]
 	path = deps/headjs
 	url = https://github.com/headjs/headjs.git
+[submodule "deps/socket.io"]
+	path = deps/socket.io
+	url = https://github.com/LearnBoost/socket.io.git
